Fix menu overflow when screen width is between 768px and 837px
@pims : re: what you saw when screen shrinking; base.css allow menu to
be seen until width <768px but may be 837px is more precise in our
case; perhaps we need to do the same for marketing-website

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -33,6 +33,12 @@ body {
 	margin: 0;
 }
 
+@media (max-width: 837px) {
+	div.nav {
+		display: none;
+	}
+}
+
 #top-container {
 	padding-left: 0;
 	background: #f4f4f4;
